Proyecto avanzado en navidad: Casi todas las fases